--- a/package.json
+++ b/package.json
@@ -4,16 +4,20 @@
   "description": "backend project",
   "main": "/src/server.ts",
   "scripts": {
+    "start": "ts-node-dev --respawn --transpile-only src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ali shorif",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/node": "^22.5.5",
     "typescript": "^5.6.2"
   },
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mongoose": "^8.6.2"
+    "mongoose": "^8.6.2",
+    "ts-node-dev": "^2.0.0"
   }
 }
